# rumtraderx-api

./: alembic.ini  database.py  gunicorn_start  main.py  models.py  requirements-dev.txt  requirements.txt
alembic/versions/: 325c050e21b2_init.py  4333d8c4dbd2_init.py  b676c4883225_init.py  c7cbf5b286a5_init.py  ccd650a8d9f8_init.py
crud/: ask.py  bid.py  product.py  product_photo.py  user.py
routers/: ask.py  bid.py  home.py  offers.py  products.py  users.py
schemas/: ask.py  bid.py  bottler.py  brand.py  canne_type.py  cask_type.py  distillery.py  product.py  product_ask.py  product_photo.py  product_price.py  production_method_detail.py  user.py
services/rumtrader_x/: pyproject.toml
services/rumtrader_x/web_app/: main.py
sql/: 20_initial_datas.sql  database_schema  seed_data.py
